--- a/coursework02/Views/Albums/Details.cshtml
+++ b/coursework02/Views/Albums/Details.cshtml
@@ -40,6 +40,12 @@
 
         <dd>
             @Html.DisplayFor(model => model.CoverImagePath)
+        </dd>  <dt>
+            @Html.DisplayNameFor(model => model.IsAgeBar)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsAgeBar)
         </dd>
 
     </dl>
