--- a/coursework02/Views/Members/Index.cshtml
+++ b/coursework02/Views/Members/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.MemberCatagories.Name)
+           Category
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FullName)
