Some changes to template

--- a/coursework02/Views/Search/GetAlbumOnShelves.cshtml
+++ b/coursework02/Views/Search/GetAlbumOnShelves.cshtml
@@ -33,7 +33,7 @@
             </th>
 
         </tr>
-        @if (Model != null)
+        @if (Model.ToList().Count()>0)
         {
             foreach (var item in Model)
             {
