--- a/coursework02/Views/Search/GetAYearOldAlbum.cshtml
+++ b/coursework02/Views/Search/GetAYearOldAlbum.cshtml
@@ -25,7 +25,7 @@
         <th>Action</th>
 
     </tr>
-    @if (Model != null)
+    @if (Model.ToList().Count()>0)
     {
         foreach (var item in Model)
         {
