--- a/coursework02/Views/Search/GetAlbumsAll.cshtml
+++ b/coursework02/Views/Search/GetAlbumsAll.cshtml
@@ -23,7 +23,7 @@
         </th>
        
     </tr>
-    @if (Model != null)
+    @if (Model.ToList().Count()>0)
     {
         foreach (var item in Model)
         {
