--- a/coursework02/Views/Search/GetLoanAlbum.cshtml
+++ b/coursework02/Views/Search/GetLoanAlbum.cshtml
@@ -20,7 +20,7 @@
         <th>Loan Type</th>
        
     </tr>
-    @if (Model != null)
+    @if (Model.ToList().Count()>0)
     {
         foreach (var item in Model)
         {
