--- a/coursework02/Views/Shared/_Layout.cshtml
+++ b/coursework02/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
@@ -22,22 +23,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Movie Store", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
-                    <li>@Html.ActionLink("Producers", "Index", "Producers")</li>
-                    <li>@Html.ActionLink("Album", "Index", "Albums")</li>
-                    <li>@Html.ActionLink("Loan", "Index", "Loans")</li>
-                    <li>@Html.ActionLink("Loan Types", "Index", "LoanTypes")</li>
-                    <li>@Html.ActionLink("Member", "Index", "Members")</li>
-                    <li>@Html.ActionLink("MemberType", "Index", "MemberCategories")</li>
+                    <li>@Html.ActionLink("AlbumByArtist", "GetAlbumByArtist", "Search")</li>
+                    <li>@Html.ActionLink("AlbumOnShelves", "GetAlbumOnShelves", "Search")</li>
+                    @Html.Partial("~/Views/shared/_menuPartial.cshtml")
 
                 </ul>
+
+                @Html.Partial("~/Views/shared/_loginPartial.cshtml")
             </div>
+
+           
         </div>
+
     </div>
     <div class="container body-content">
         @RenderBody()
@@ -47,8 +48,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+   
     @RenderSection("scripts", required: false)
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
