--- a/coursework02/Views/Search/GetLoanAlbum.cshtml
+++ b/coursework02/Views/Search/GetLoanAlbum.cshtml
@@ -15,6 +15,8 @@
             @Html.DisplayNameFor(model => model.TotalLoan)
         </th>
         <th>Album</th>
+        <th> Copy No</th>
+        <th> Member</th>
         <th>IssueDate</th>
         <th>DueDate</th>
         <th>Loan Type</th>
@@ -29,6 +31,9 @@
             @Html.DisplayFor(modelItem => item.TotalLoan)
         </td>
         <td>@item.Loan.Album.Name</td>
+        <td>@item.Loan.Album.CopyNumber</td>
+        <td>@item.Loan.Members.FullName</td>       
+        
         <td>@item.Loan.IssuedDate</td>
         <td>@item.Loan.DueDate</td>
         <td>@item.Loan.LoanTypes.Description</td>
