--- a/coursework02/Views/Search/GetLoansByMember.cshtml
+++ b/coursework02/Views/Search/GetLoansByMember.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayNameFor(model => model.ReturnedDate)
             </th>
         </tr>
-        @if (Model.ToList().Count()>0)
+        @if (Model!=null)
         {
             foreach (var item in Model)
             {
